@@ -2,6 +2,12 @@
 
 . /usr/unifi/functions
 
+# Check that any included hotfixes have been properly applied and exit if not
+if ! validate; then
+  echo "Missing an included hotfix"
+  exit 1
+fi
+
 if [ -x /usr/local/bin/docker-build.sh ]; then
     /usr/local/bin/docker-build.sh "${PKGURL}"
 fi
@@ -48,7 +54,7 @@ JVM_MAX_HEAP_SIZE=${JVM_MAX_HEAP_SIZE:-1024M}
 
 
 MONGOLOCK="${DATAPATH}/db/mongod.lock"
-JVM_EXTRA_OPTS="${JVM_EXTRA_OPTS} -Dunifi.datadir=${DATADIR} -Dunifi.logdir=${LOGDIR} -Dunifi.rundir=${RUNDIR}"
+JVM_EXTRA_OPTS="${JVM_EXTRA_OPTS} --add-opens=java.base/java.time=ALL-UNNAMED -Dunifi.datadir=${DATADIR} -Dunifi.logdir=${LOGDIR} -Dunifi.rundir=${RUNDIR}"
 PIDFILE=/var/run/unifi/unifi.pid
 
 if [ ! -z "${JVM_MAX_HEAP_SIZE}" ]; then
@@ -128,6 +134,14 @@ if ! [[ -z "$DB_URI" || -z "$STATDB_URI" || -z "$DB_NAME" ]]; then
   settings["unifi.db.name"]="$DB_NAME"
 fi
 
+if ! [[ -z "$PORTAL_HTTP_PORT"  ]]; then
+  settings["portal.http.port"]="$PORTAL_HTTP_PORT"
+fi
+
+if ! [[ -z "$PORTAL_HTTPS_PORT"  ]]; then
+  settings["portal.https.port"]="$PORTAL_HTTPS_PORT"
+fi
+
 if ! [[ -z "$UNIFI_HTTP_PORT"  ]]; then
   settings["unifi.http.port"]="$UNIFI_HTTP_PORT"
 fi
@@ -146,6 +160,11 @@ if [[ "$UNIFI_STDOUT" == "true" ]]; then
 fi
 
 UNIFI_CMD="java ${JVM_OPTS} -jar ${BASEDIR}/lib/ace.jar start"
+
+if [ "$EUID" -ne 0 ] && command -v permset &> /dev/null
+then
+  permset
+fi
 
 # controller writes to relative path logs/server.log
 cd ${BASEDIR}
@@ -173,7 +192,7 @@ if [[ "${@}" == "unifi" ]]; then
         ${UNIFI_CMD} &
     elif [ "${RUNAS_UID0}" == "false" ]; then
         if [ "${BIND_PRIV}" == "true" ]; then
-            if setcap 'cap_net_bind_service=+ep' "${JAVA_HOME}/jre/bin/java"; then
+            if setcap 'cap_net_bind_service=+ep' "${JAVA_HOME}/bin/java"; then
                 sleep 1
             else
                 log "ERROR: setcap failed, can not continue"
